--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
     background-color: rgb(72, 72, 72);
     font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 .gameContainer {
@@ -12,30 +14,39 @@ body {
 
 .gameStatsBar {
     font-size: 20px;
-    padding: 15px 10px 0 10px;
+    padding: 15px 10px 10px 10px;
     color: whitesmoke;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cardCounterContainer {
+    display: flex;
 }
 
 #cardCounter {
     display: inline-block;
-    position: absolute;
-    top: 21px;
-    margin-left: 10px;
+    margin: auto 0 auto 10px;
+}
+
+
+
+#timer {
+    padding: 0;
+    display: inline-block;
+    margin-right: 10px;
 }
 
 .cardsIcon {
     display: inline-block;
-    height: 25px;
+    height: 40px;
+    
 }
 
-.gameOver {
-    display: inline-block;
-}
 
 .setCardsContainer {
-
     min-height: 100px;
-    
     padding: 5px;
 }
 
@@ -43,7 +54,7 @@ body {
 
 .setCard {
     
-    background-color: rgb(207, 197, 130);
+    background-color:whitesmoke;
     height: 70px;
     max-width: 33.33%;
     display: flex;
@@ -51,6 +62,9 @@ body {
     justify-content: center;
     border-radius: 5px;
     margin: 5px 5px 5px 5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: rgba(0, 0, 0, 0);
 }
 
 .rowOfCards {
@@ -59,7 +73,7 @@ body {
 
 .setCardImg {
     height: 100%;
-    margin: 0 3% 0 3%;
+    margin: 0 2% 0 2%;
     
 }
 
@@ -79,8 +93,39 @@ body {
 .cardIsClicked {
     border-style: solid;
     border-width: 5px;
-    margin: 0;
-    border-color: blue;
+    border-color: rgb(58, 58, 255);
+}
+
+.endOfGame {
+    margin-top: 30px;
+    color: whitesmoke;
+    font-size: 25px;
+    text-align: center;
+}
+
+.endFoundAll {
+    text-align: center;
+}
+
+#endOfGameTime {
+    text-align: center;
+}
+
+.newGameButton {
+ border-style: solid;
+ border-width: 3px;
+ border-radius: 5px;
+ border-color: whitesmoke;
+ background-color: rgba(255, 222, 173, 0);
+ color: whitesmoke;
+ padding: 5px;
+ font-family: 'Poppins', sans-serif;
+ font-size: 15px;
+ margin-top: 50px;
+}
+
+.newGameButton:hover {
+    background-color: rgb(58, 58, 255);
 }
 
 @media screen and (min-width: 400px) {
@@ -100,5 +145,6 @@ body {
         height: 100px;
     }
 }
+
 
 
