--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ body {
 
 #timer {
     padding: 0;
+    width: 40px;
     display: inline-block;
     margin-right: 10px;
 }
@@ -145,7 +146,9 @@ body {
         height: 100px;
     }
 
-    .setCardsContainer {padding: 5px 0 5px 0;}
+    .setCardsContainer {
+        padding: 5px 0 5px 0;
+    }
 }
 
 
