--- a/style.css
+++ b/style.css
@@ -109,12 +109,33 @@ button:hover {
     filter: invert(27%) sepia(78%) saturate(843%) hue-rotate(75deg) brightness(98%) contrast(86%)
 }
 
+.hintCard{
+    border-style: solid;
+    border-width: 5px;
+    border-color: rgb(253, 21, 21);
+}
+
+#hintContainer {
+    position: relative;
+    background-color: rgb(51, 83, 47);
+    text-align: center;
+  }
+
+#hintButton {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  animation: flyInBounce 0.5s forwards;
+  
+}
 
 .cardIsClicked {
     border-style: solid;
     border-width: 5px;
     border-color: rgb(70, 70, 252);
 }
+
+
 
 .endOfGame {
     margin-top: 30px;
@@ -131,6 +152,11 @@ button:hover {
 
 #endOfGameTime {
     text-align: center;
+}
+
+#resetMessage {
+    font-size: 14px;
+    padding: 0 10px;
 }
 
 .bestTime {
@@ -159,6 +185,12 @@ footer {
     font-size: 13px;
 }
 
+.hiddenCardImg {
+    height: 1px;
+    opacity: 0;
+
+}
+
 @media screen and (min-width: 400px) {
     .setCard {
         height: 80px;
@@ -181,5 +213,26 @@ footer {
     }
 }
 
+@keyframes flyInBounce {
 
+    0% {
+      bottom: -400px;
+    }
+  
+
+    60% {
+        bottom: -80px;
+    }
+  
+
+    80% {
+      bottom: - 130px;
+    }
+  
+
+    100% {
+      bottom: -100px;
+      /* transform: translateY(-15px); */
+    }
+  }
 
